--- a/app/src/main/res/layout/activity_tag_sets.xml
+++ b/app/src/main/res/layout/activity_tag_sets.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,70 +9,74 @@
 
     <include
         android:id="@+id/appBar"
-        layout="@layout/toolbar"
-        />
+        layout="@layout/toolbar" />
+
+    <TextView
+        android:id="@+id/number_tag_set_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/you_have"
+        android:textColor="@color/colorWhiteTwo"
+        android:textSize="17dp" />
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:id="@+id/container_create_grid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/icons8_plus_96" />
+
         <TextView
-            android:id="@+id/number_tag_set_tv"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="10dp"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="17dp"
-            android:text="@string/you_have"
+            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:text="@string/add_tag_set"
             android:textColor="@color/colorWhiteTwo"
-            android:layout_weight="0.8"/>
-
-        <LinearLayout
-            android:id="@+id/container_create_grid"
-            android:layout_marginStart="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_weight="0.2"
-            android:layout_marginTop="10dp"
-           >
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/icons8_plus_96" />
-            <TextView
-                android:layout_marginStart="10dp"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/add_tag_set"
-                android:textSize="17dp"
-                android:textColor="@color/colorWhiteTwo"/>
-        </LinearLayout>
+            android:textSize="17dp" />
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <FrameLayout
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.1" />
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/all_grid_fragment_container"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.6">
-        </FrameLayout>
-        <FrameLayout
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/templates_fragment_container"
+            android:layout_weight="0.6" />
+
+        <RelativeLayout
             android:layout_width="0dp"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.4">
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:layout_weight="0.3" />
     </LinearLayout>
 
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/templates_fragment_container"
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_weight="0.4"
+        android:visibility="gone"></FrameLayout>
 </LinearLayout>
