--- a/app/src/main/res/layout/create_tags_fragment.xml
+++ b/app/src/main/res/layout/create_tags_fragment.xml
@@ -96,7 +96,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="20dp">
             <TextView
                 android:id="@+id/grid"
                 android:layout_width="wrap_content"
@@ -104,7 +104,7 @@
                 android:padding="10dp"
                 android:paddingRight="20dp"
                 android:visibility="gone"
-                android:text="Votre grille en cours de création  "
+                android:text="Grille en cours de création  "
                 android:textColor="@color/colorWhiteTwo"
                 android:textSize="20sp"
                 app:fontFamily="@font/roboto" />
@@ -119,7 +119,7 @@
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
                 android:layout_marginStart="50dp"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="10dp"
                 android:scrollbars="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -128,8 +128,8 @@
             <Button
                 android:id="@+id/save_grid_btn"
                 style="@style/Widget.AppCompat.Button.Small"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:background="@drawable/save"
                 android:fontFamily="@font/roboto_bold"
                 android:padding="5dp"
