--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -4,67 +4,124 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:gravity="center"
-    android:orientation="vertical">
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
-
-        <ImageView
-            android:id="@+id/img_item_video"
-            android:layout_width="150dp"
-            android:layout_height="100dp"
-            android:alpha="0.5"
-            app:srcCompat="@android:color/darker_gray" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />
-    </RelativeLayout>
+    android:orientation="vertical"
+    android:background="@drawable/style_radius">
 
     <LinearLayout
         android:id="@+id/title_video_container"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal">
+        android:layout_marginStart="8dp"
+        android:orientation="horizontal"
+      >
 
         <ImageView
-            android:id="@+id/img_upload_video"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/icons8_stockage_cloud_priv__96" />
+            android:id="@+id/play"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/moviewhite" />
 
         <TextView
             android:id="@+id/title_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
             android:text="@string/title_video"
             android:textColor="@color/colorWhiteTwo"
-            app:fontFamily="@font/roboto" />
+            app:fontFamily="@font/roboto_bold" />
 
     </LinearLayout>
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
+        <TextView
+            android:id="@+id/tv_available"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_weight="0.7"
+            android:text="@string/available"
+            android:textColor="@color/colorWhiteTwo"
+            app:fontFamily="@font/roboto"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/iv_device"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/iv_device"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="35dp"
+            android:layout_marginBottom="8dp"
+            android:alpha="0.8"
+            android:background="@drawable/smarth"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <ImageView
+            android:id="@+id/iv_available_device"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/nodispo"
+            android:alpha="0.8"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_device"
+            app:layout_constraintEnd_toEndOf="@+id/iv_device" />
+
+        <ImageView
+            android:id="@+id/iv_plateforme"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/laptop"
+            android:alpha="0.8"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/iv_available_plateforme"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="0dp"
+            android:background="@drawable/dispo"
+            android:alpha="0.8"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_plateforme"
+            app:layout_constraintEnd_toEndOf="@+id/iv_plateforme" />
+
+    </android.support.constraint.ConstraintLayout>
     <TextView
+        android:layout_marginStart="8dp"
         android:id="@+id/video_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/timestamp"
         android:textColor="@color/colorWhiteTwo"
-        app:fontFamily="@font/roboto" />
+        app:fontFamily="@font/roboto"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
+        android:layout_marginStart="8dp"
         android:id="@+id/video_duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/colorWhiteTwo"
-        app:fontFamily="@font/roboto" />
-
+        app:fontFamily="@font/roboto"
+        android:text="Duree"
+        android:layout_marginBottom="8dp"/>
 </LinearLayout>
